Completed section 3. Will add the overloaded operators / inline functions as needed

--- a/GPRO-Graphics1/project/VisualStudio/GPRO-Graphics1/GPRO-Graphics1.vcxproj
+++ b/GPRO-Graphics1/project/VisualStudio/GPRO-Graphics1/GPRO-Graphics1.vcxproj
@@ -159,6 +159,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\include\gpro\gpro-math\gproVector.h" />
+    <ClInclude Include="color.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\include\gpro\gpro-math\_inl\gproVector.inl" />
