--- a/GPRO-Graphics1/project/VisualStudio/GPRO-Graphics1/GPRO-Graphics1.vcxproj
+++ b/GPRO-Graphics1/project/VisualStudio/GPRO-Graphics1/GPRO-Graphics1.vcxproj
@@ -158,8 +158,8 @@
     <ClCompile Include="GPRO-Graphics1.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\include\gpro\color.h" />
     <ClInclude Include="..\..\..\include\gpro\gpro-math\gproVector.h" />
-    <ClInclude Include="color.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\include\gpro\gpro-math\_inl\gproVector.inl" />
