--- a/GPRO-Graphics1/project/VisualStudio/GPRO-Graphics1/GPRO-Graphics1.vcxproj.filters
+++ b/GPRO-Graphics1/project/VisualStudio/GPRO-Graphics1/GPRO-Graphics1.vcxproj.filters
@@ -32,7 +32,7 @@
     <ClInclude Include="..\..\..\include\gpro\gpro-math\gproVector.h">
       <Filter>Header Files\gpro\gpro-math</Filter>
     </ClInclude>
-    <ClInclude Include="color.h">
+    <ClInclude Include="..\..\..\include\gpro\color.h">
       <Filter>Header Files\gpro</Filter>
     </ClInclude>
   </ItemGroup>
