Completed chapter 4. Implemented a whole bunch of vector operators (/, *, -, length(), length_squared(), unit_vector()) and created a camera to have rays originate from

--- a/GPRO-Graphics1/project/VisualStudio/GPRO-Graphics1/GPRO-Graphics1.vcxproj
+++ b/GPRO-Graphics1/project/VisualStudio/GPRO-Graphics1/GPRO-Graphics1.vcxproj
@@ -160,6 +160,7 @@
   <ItemGroup>
     <ClInclude Include="..\..\..\include\gpro\color.h" />
     <ClInclude Include="..\..\..\include\gpro\gpro-math\gproVector.h" />
+    <ClInclude Include="..\..\..\include\gpro\ray.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\include\gpro\gpro-math\_inl\gproVector.inl" />
