--- a/GPRO-Graphics1/project/VisualStudio/GPRO-Graphics1/GPRO-Graphics1.vcxproj
+++ b/GPRO-Graphics1/project/VisualStudio/GPRO-Graphics1/GPRO-Graphics1.vcxproj
@@ -160,7 +160,9 @@
   <ItemGroup>
     <ClInclude Include="..\..\..\include\gpro\color.h" />
     <ClInclude Include="..\..\..\include\gpro\gpro-math\gproVector.h" />
+    <ClInclude Include="..\..\..\include\gpro\hittable.h" />
     <ClInclude Include="..\..\..\include\gpro\ray.h" />
+    <ClInclude Include="..\..\..\include\gpro\sphere.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\include\gpro\gpro-math\_inl\gproVector.inl" />
