--- a/GPRO-Graphics1/project/VisualStudio/GPRO-Graphics1/GPRO-Graphics1.vcxproj
+++ b/GPRO-Graphics1/project/VisualStudio/GPRO-Graphics1/GPRO-Graphics1.vcxproj
@@ -161,6 +161,8 @@
     <ClInclude Include="..\..\..\include\gpro\color.h" />
     <ClInclude Include="..\..\..\include\gpro\gpro-math\gproVector.h" />
     <ClInclude Include="..\..\..\include\gpro\hittable.h" />
+    <ClInclude Include="..\..\..\include\gpro\hittable_list.h" />
+    <ClInclude Include="..\..\..\include\gpro\mathconstants.h" />
     <ClInclude Include="..\..\..\include\gpro\ray.h" />
     <ClInclude Include="..\..\..\include\gpro\sphere.h" />
   </ItemGroup>
